--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dwp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "jest"
   },
@@ -13,6 +13,8 @@
   "author": "Drew Maughan <drew@pzlabs.co>",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^26.5.0"
+    "jest": "^26.5.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
