--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "author": "Drew Maughan <drew@pzlabs.co>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "faker": "^5.1.0",
     "jest": "^26.5.0",
+    "localstorage-browser-polyfill": "^0.1.0",
     "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
